map improvements, dist upd

--- a/akcents.html
+++ b/akcents.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Новини</title>
+    <title>Акценти</title>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="theme-color" content="#fff">
@@ -12,7 +12,7 @@
 
   </head>
 
-  <body>
+  <body class="is-beta">
 
     <!-- BEGIN content -->
 
@@ -35,23 +35,26 @@
         </span>
             </a>
 
-            <a href="tel:0441112212" class="header-call">
+            <a href="tel:0442549488" class="header-call">
               <span class="header-call__text">Гаряча лінія</span>
               <span class="header-call__number">
           <i class="icon icon-phone"></i>
-          (044) 111-22-12
+          (044) 254-94-88
         </span>
             </a>
+            <a href="#" class="header-others">Інші контакти</a>
           </div>
 
           <div class="header__menu">
             <nav class="main-menu">
-              <a class="main-menu__link is-active" href="#">Головна</a>
-              <a class="main-menu__link" href="#">Новини</a>
-              <a class="main-menu__link" href="#">Детальна інформація</a>
-              <a class="main-menu__link" href="#">Контакти</a>
-              <a class="main-menu__link" href="#">FAQ</a>
-              <a class="main-menu__link" href="#">Online послуги</a>
+              <!--  <a class="main-menu__link is-active" href="#">Головна</a>
+        <a class="main-menu__link" href="contacts.html">Інші контакти</a> -->
+              <!-- <a class="main-menu__link is-active" href="#">Головна</a>
+        <a class="main-menu__link" href="#">Новини</a>
+        <a class="main-menu__link" href="#">Детальна інформація</a>
+        <a class="main-menu__link" href="#">Контакти</a>
+        <a class="main-menu__link" href="#">Часті запитання</a>
+        <a class="main-menu__link" href="#">Online послуги</a> -->
             </nav>
 
             <div class="header__right">
@@ -94,10 +97,10 @@
           <header class="content-header">
             <div class="content-header__left">
               <h3 class="title title_link">
-            <a href="#">Події</a>
+            <a href="news.html">Новини</a>
           </h3>
               <h3 class="title title_link is-active">
-            <a href="#">Новини</a>
+            <a href="akcents.html">Акценти</a>
           </h3>
             </div>
             <div class="content-header__right">
@@ -151,7 +154,7 @@
                   <img src="img/news/news-1.jpg" alt="">
                 </div>
                 <div class="news__content">
-                  <p class="news__text">Патрульну службу України номіновано на Відзнаку ґендерної рівноваги</p>
+                  <p class="news__text">Патрульну службу України номіновано на Відзнаку ґендерної рівноваги <span class="news__date">12.11.2016</span></p>
                   <i class="news__arrow icon icon-arrow-right"></i>
                 </div>
               </a>
@@ -165,7 +168,7 @@
                   <img src="img/news/news-2.jpg" alt="">
                 </div>
                 <div class="news__content">
-                  <p class="news__text">Приходьте поспілкуватись з шістьма офіцерами патрульної поліції</p>
+                  <p class="news__text">Приходьте поспілкуватись з шістьма офіцерами патрульної поліції <span class="news__date">12.11.2016</span></p>
                   <i class="news__arrow icon icon-arrow-right"></i>
                 </div>
               </a>
@@ -179,7 +182,7 @@
                   <img src="img/news/news-3.jpg" alt="">
                 </div>
                 <div class="news__content">
-                  <p class="news__text">Поповнення лав Львівської Патрульної поліції</p>
+                  <p class="news__text">Поповнення лав Львівської Патрульної поліції <span class="news__date">12.11.2016</span></p>
                   <i class="news__arrow icon icon-arrow-right"></i>
                 </div>
               </a>
@@ -193,7 +196,7 @@
                   <img src="img/news/news-1.jpg" alt="">
                 </div>
                 <div class="news__content">
-                  <p class="news__text">Патрульну службу України номіновано на Відзнаку ґендерної рівноваги</p>
+                  <p class="news__text">Патрульну службу України номіновано на Відзнаку ґендерної рівноваги <span class="news__date">12.11.2016</span></p>
                   <i class="news__arrow icon icon-arrow-right"></i>
                 </div>
               </a>
@@ -207,7 +210,7 @@
                   <img src="img/news/news-2.jpg" alt="">
                 </div>
                 <div class="news__content">
-                  <p class="news__text">Приходьте поспілкуватись з шістьма офіцерами патрульної поліції</p>
+                  <p class="news__text">Приходьте поспілкуватись з шістьма офіцерами патрульної поліції <span class="news__date">12.11.2016</span></p>
                   <i class="news__arrow icon icon-arrow-right"></i>
                 </div>
               </a>
@@ -221,7 +224,7 @@
                   <img src="img/news/news-3.jpg" alt="">
                 </div>
                 <div class="news__content">
-                  <p class="news__text">Поповнення лав Львівської Патрульної поліції</p>
+                  <p class="news__text">Поповнення лав Львівської Патрульної поліції <span class="news__date">12.11.2016</span></p>
                   <i class="news__arrow icon icon-arrow-right"></i>
                 </div>
               </a>
@@ -235,7 +238,7 @@
                   <img src="img/news/news-1.jpg" alt="">
                 </div>
                 <div class="news__content">
-                  <p class="news__text">Патрульну службу України номіновано на Відзнаку ґендерної рівноваги</p>
+                  <p class="news__text">Патрульну службу України номіновано на Відзнаку ґендерної рівноваги <span class="news__date">12.11.2016</span></p>
                   <i class="news__arrow icon icon-arrow-right"></i>
                 </div>
               </a>
@@ -249,7 +252,7 @@
                   <img src="img/news/news-2.jpg" alt="">
                 </div>
                 <div class="news__content">
-                  <p class="news__text">Приходьте поспілкуватись з шістьма офіцерами патрульної поліції</p>
+                  <p class="news__text">Приходьте поспілкуватись з шістьма офіцерами патрульної поліції <span class="news__date">12.11.2016</span></p>
                   <i class="news__arrow icon icon-arrow-right"></i>
                 </div>
               </a>
@@ -263,7 +266,7 @@
                   <img src="img/news/news-3.jpg" alt="">
                 </div>
                 <div class="news__content">
-                  <p class="news__text">Поповнення лав Львівської Патрульної поліції</p>
+                  <p class="news__text">Поповнення лав Львівської Патрульної поліції <span class="news__date">12.11.2016</span></p>
                   <i class="news__arrow icon icon-arrow-right"></i>
                 </div>
               </a>
